# LineMatching

./: README.md
CodeForLineMatching/: CMakeLists.txt  Main(fitPlane).cpp  Main.cpp  linedetection.cpp  linedetector.cpp  linedetector.h  readMe.txt  system.h
CodeForLineMatching/removed/: 0.cpp  Demo_LBD_single.cpp  LineDescriptor.cpp  LineMatchingAlgorithm.hpp  PairwiseLineMatching.cpp  Untitled1.cpp  m.cpp
